--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "3.4.0",
     "react-scripts": "4.0.3",
+    "terra": "^0.1.0",
+    "terra-button": "^3.60.0",
+    "terra-form-field": "^4.20.0",
+    "terra-form-input": "^4.17.0",
+    "terra-table": "^4.30.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
